--- a/Flexbox-website/index.html
+++ b/Flexbox-website/index.html
@@ -20,7 +20,7 @@
       </div><!--navigation-->
       <div class="intro">
         <div class="main-title">
-          <h1>A SUPER GREAT COOL TEXT WITH AWESOME STUFF</h1>
+          <h1>A SUPER COOL PERSUASIVE AND WOW COPY </h1>
           <button type="button" name="button">Click Me</button>
         </div>
       </div><!-- intro -->
@@ -43,35 +43,36 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           <button type="button" name="button">Learn More</button>
       </div>
-      <div class="boxTwo">
-
-      </div>
+      <div class="boxTwo"></div>
     </example>
     <plans>
-      <div class="planBox">
-        <img src="" alt="">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <button type="button" name="button">MORE</button>
-      </div>
-      <div class="planBox">
-        <img src="" alt="">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <button type="button" name="button">MORE</button>
-      </div>
-      <div class="planBox">
-        <img src="" alt="">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <button type="button" name="button">MORE</button>
+      <center><h2>Center</h2></center>
+      <div class = "boxes">
+        <div class="planBox">
+          <h3>Plan 1</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. sit amet, consectetur adipisicing elit.</p>
+          <button type="button" name="button">MORE</button>
+        </div>
+        <div class="planBox">
+          <h3>Plan 2</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <button type="button" name="button">MORE</button>
+        </div>
+        <div class="planBox">
+          <h3>Plan 3</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserun.</p>
+          <button type="button" name="button">MORE</button>
+        </div>
       </div>
     </plans>
     <features>
       <div class="section-one">
         <div class="one-text">
           <h2>Great Features</h2>
-          <p></p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
-        <div class="one-image">
-          <img src="" alt="">
+        <div class="one-box">
+          Box
         </div>
       </div><!--section-one-->
       <div class="section-two">
@@ -95,7 +96,7 @@
     </features>
     <footer>
       <div class="footer-menu">
-        <div class="category-one">
+        <div class="footer-cat category-one">
           <h4>Category One</h4>
           <ul>
             <li>Menu One</li>
@@ -104,7 +105,7 @@
             <li>Menu Four</li>
           </ul>
         </div>
-        <div class="category-two">
+        <div class="footer-cat category-two">
           <h4>Category Two</h4>
           <ul>
             <li>Menu One</li>
@@ -113,7 +114,7 @@
             <li>Menu Four</li>
           </ul>
         </div>
-        <div class="address">
+        <div class="footer-cat address">
           <h4>Contact Information</h4>
           <p>
             randommail@gmailcom<br>
@@ -122,7 +123,8 @@
             1-000-0000-000
           </p>
         </div>
-        <div class="social-links">
+        <div class="footer-cat social-links">
+          <h4>Social Icons</h4>
           <ul>
             <li><img src="" alt=""></li>
             <li><img src="" alt=""></li>
