--- a/Flexbox-website/index.html
+++ b/Flexbox-website/index.html
@@ -2,20 +2,22 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>A Super Cool Flexbox Website</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/media.css">
   </head>
   <body>
     <header>
       <div class="nav">
         <div class="logo">SUPER LOGO</div>
           <ul>
-            <li>HOME</li>
             <li>ABOUT</li>
-            <li>WORKS</li>
-            <li>WHAT WE DO</li>
-            <li>CONTACT</li>
+            <li>HOW GREAT</li>
+            <li>THESE MENU</li>
+            <li>NAMES</li>
+            <li>CAN BE</li>
           </ul>
       </div><!--navigation-->
       <div class="intro">
@@ -26,13 +28,20 @@
       </div><!-- intro -->
     </header>
     <testimonial>
-      <div class="icon"><img src="images/user.png" alt=""></div>
-      <h2>Testimonial</h2>
+      <ul class="star-icon">
+        <li><img src="images/star-empty.png" alt="" width="30px"></li>
+        <li><img src="images/star-empty.png" alt="" width="30px"></li>
+        <li><img src="images/star-empty.png" alt="" width="30px"></li>
+        <li><img src="images/star-empty.png" alt="" width="30px"></li>
+        <li><img src="images/star-empty.png" alt="" width="30px"></li>
+      </ul>
+
+      <h2>Marvelous Testimonial</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </testimonial>
     <strength>
       <div class="box">
-          <h2>Strength Title</h2>
+          <h2>A Great Title</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
           <button type="button" name="button">Learn More</button>
       </div>
@@ -40,58 +49,70 @@
     </strength>
     <example>
       <div class="box">
-          <h2>Strength Title</h2>
+          <h2>Utterly Fabulous Title</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           <button type="button" name="button">Learn More</button>
       </div>
       <div class="boxTwo"></div>
     </example>
     <plans>
-      <center><h2>Center</h2></center>
+      <center><h2>Extraordinary Plans</h2></center>
       <div class = "boxes">
         <div class="planBox">
-          <h3>Plan 1</h3>
+          <h3>Killer Plan</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. sit amet, consectetur adipisicing elit.</p>
           <button type="button" name="button">MORE</button>
         </div>
         <div class="planBox">
-          <h3>Plan 2</h3>
+          <h3>Nailed Plan</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           <button type="button" name="button">MORE</button>
         </div>
         <div class="planBox">
-          <h3>Plan 3</h3>
+          <h3>Worthy Plan</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserun.</p>
           <button type="button" name="button">MORE</button>
         </div>
       </div>
     </plans>
     <features>
+      <h2>Great Features</h2>
       <div class="section-one">
         <div class="one-text">
-          <h2>Great Features</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-        <div class="one-box">
-          Box
         </div>
       </div><!--section-one-->
       <div class="section-two">
         <div class="featBox">
           <h3>Feature 1</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="featBox-cool">
+              <img src="images/feat1.png" alt="">
+          </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
         </div>
         <div class="featBox">
           <h3>Feature 2</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="featBox-cool">
+            <img src="images/feat2.png" alt="">
+          </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitationollit anim id est laborum.</p>
         </div>
         <div class="featBox">
           <h3>Feature 3</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="featBox-cool">
+            <img src="images/feat3.png" alt="">
+          </div>
+          <div class="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum deserunt mollit anim id est laborum.</p>
+
+          </div>
         </div>
         <div class="featBox">
           <h3>Feature 4</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="featBox-cool">
+            <img src="images/feat4.png" alt="">
+          </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
         </div>
       </div><!--section-two-->
     </features>
@@ -99,37 +120,42 @@
       <div class="footer-menu">
         <div class="footer-cat category-one">
           <h4>Category One</h4>
+          <hr>
           <ul>
-            <li>Menu One</li>
-            <li>Menu Two</li>
-            <li>Menu Three</li>
-            <li>Menu Four</li>
+            <li>Cool Menu</li>
+            <li>Superb Naming</li>
+            <li>Bloody Hell</li>
+            <li>Awesome Word Choice</li>
           </ul>
         </div>
         <div class="footer-cat category-two">
           <h4>Category Two</h4>
+          <hr>
           <ul>
-            <li>Menu One</li>
-            <li>Menu Two</li>
-            <li>Menu Three</li>
-            <li>Menu Four</li>
+            <li>So Dope</li>
+            <li>I am the shit</li>
+            <li>Woo Hoooo</li>
+            <li>Nice Eh</li>
           </ul>
         </div>
-        <div class="footer-cat address">
+        <div class="footer-cat">
           <h4>Contact Information</h4>
-          <p>
-            randommail@gmailcom<br>
-            Ayako Studios, 4th Floor, Convention Center,<br>
-            Sayama Street 203, Vancouver, BC, Cananda, V540G1<br>
-            1-000-0000-000
-          </p>
+          <hr>
+          <ul>
+            <li>funkyName@gmailcom</li>
+            <li>Super Saayaman Studios<br>
+              Sayama Street 203, Vancouver, BC, Cananda, V540G</li>
+            <li>1-000-0000-000</li>
+          </ul>
         </div>
         <div class="footer-cat social-links">
           <h4>Social Icons</h4>
+          <hr>
           <ul>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
+            <li><img src="images/facebook.png" alt="facebook" width="10px"></li>
+            <li><img src="images/twitter.png" alt="twitter" width="20px"></li>
+            <li><img src="images/google-plus.png" alt="gPlus" width="24px"></li>
+            <li><img src="images/linkedin.png" alt="li" width="18px"></li>
           </ul>
         </div>
       </div><!--footer-menu-->
